--- a/apps/users/templates/users/seller_application.html
+++ b/apps/users/templates/users/seller_application.html
@@ -33,6 +33,14 @@
 				{{ user.phone_number }}
 			</div>
 
+			
+			<div class="mb-4">
+				<div class="block text-sm font-medium text-gray-700 mb-1">
+					Desired Role
+				</div>
+				{{ form.desired_role }}
+			</div>
+
 			<!-- About Brand -->
 			<div class="mb-6">
 				<label for="{{ form.description.id_for_label }}" class="block text-sm font-medium text-gray-700 mb-1">
