--- a/apps/products/templates/products/personal.html
+++ b/apps/products/templates/products/personal.html
@@ -20,6 +20,11 @@
                             <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
                                 Manager
                             </span>
+                        {% elif user.is_courier %}
+                            <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">
+                                Courier
+                            </span>
+                        
                         {% else %}
                             <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">
                                 Buyer
