--- a/apps/products/templates/products/add_product.html
+++ b/apps/products/templates/products/add_product.html
@@ -124,7 +124,14 @@
               {{ form.size }}
               <div id="sizesError" class="form-error mt-2">{{ form.size.errors }}</div>
             </div>
-          
+
+            <!-- Gender -->
+            <div class="mb-4">
+              <div class="mt-4">
+                <label for="{{ form.gender.id_for_label}}" class="form-label">Gender</label>
+              </div>
+              {{ form.gender }}
+            </div>
             <!-- Description -->
             <div>
               <label for="{{ form.description.id_for_label }}" class="form-label">Description</label>
