--- a/apps/products/templates/products/personal_my_products.html
+++ b/apps/products/templates/products/personal_my_products.html
@@ -10,7 +10,7 @@
         <a href="{% url 'users:seller_application' %}">
             <div class="bg-white rounded-md overflow-hidden border-2 border-dashed border-gray-300 flex flex-col items-center justify-center h-64 cursor-pointer hover:bg-gray-50 transition-colors">
                 <i class="fas fa-plus text-4xl text-gray-400 mb-2"></i>
-                <p class="text-gray-500 font-medium">Стать продавцом</p>
+                <p class="text-gray-500 font-medium text-center flex">Стать продавцом или курьером</p>
             </div>
         </a>
         {% else %}
